# inkscope

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-desktop.yml
scripts/: generate-icon.mjs  latest-changelog.mjs  release.mjs  tauri-build.sh  tauri-dev.sh
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: legado.rs  lib.rs  main.rs
src/lib/: tauri.ts
